[package]
name = "virtual-lorawan-device"
version = "0.2.14-alpha.0"
authors = ["lthiery <thiery.louis@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
anyhow = "1"
bytes = "1"
chrono = "0"
config = { version="0.14", default-features = false, features = ["toml"] }
env_logger = "0"
futures-util = "0"
heapless = "^0.8"
hex = "0"
http-body-util = "0"
hyper = { version = "1", features = ["full"] }
hyper-util = {  version = "0", features = ["tokio"] }
log = "0"
lorawan-device = { version = ">=0.12.2", features = ["serde"] }
prometheus = "0"
rand_core = { version = "0.6", default-features = false, optional = true }
semtech-udp = { version="0.12", features = ["client"] }
serde = "1"
structopt = "0"
thiserror = "1"
rand = "0"
triggered = "0"

[patch.crates-io]
lorawan-device = { git = "https://github.com/lora-rs/lora-rs.git", rev="a5e690a3f1f68c4e4c43efcd564467938c574ea3" }
lora-modulation = { git = "https://github.com/lora-rs/lora-rs.git", rev="a5e690a3f1f68c4e4c43efcd564467938c574ea3" }

[dependencies.tokio]
version = "1"
features = ["macros", "sync", "time", "rt-multi-thread", "signal"]

[features]
multicast = [ "lorawan-device/multicast" ]
async-radio = [ "rand_core/getrandom" ]
